parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    STR
    TRUE
    FALSE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM neuraladdfuncstable varsgl functions PRINCIPAL LEFTPAR RIGHTPAR LEFTBR neuralprinjump statutes RIGHTBR
Rule 2     neuraladdfuncstable -> ID SEMICOLON
Rule 3     neuralprinjump -> <empty>
Rule 4     varsgl -> VARS vars
Rule 5     varsgl -> empty
Rule 6     vars -> typing COLON neuralinsertvar varsarr varsmul vars
Rule 7     vars -> empty
Rule 8     neuralinsertvar -> ID
Rule 9     varsarr -> neuralinitdim CTEINT neuralenddim
Rule 10    varsarr -> empty
Rule 11    neuralenddim -> RIGHTSQR
Rule 12    neuralinitdim -> LEFTSQR
Rule 13    varsmul -> SEMICOLON
Rule 14    varsmul -> COMMA neuralinsertvar varsarr varsmul
Rule 15    functions -> FUNCTION functype neuralinsertfuncs funcparam
Rule 16    functions -> empty
Rule 17    neuralinsertfuncs -> ID
Rule 18    funcparam -> LEFTPAR parameters RIGHTPAR neuralupdateparamtable SEMICOLON varsgl LEFTBR neuralinitfuncs statutes RIGHTBR neuralfuncsize neuralendfuncs functions
Rule 19    neuralupdateparamtable -> <empty>
Rule 20    neuralendfuncs -> <empty>
Rule 21    neuralfuncsize -> <empty>
Rule 22    neuralinitfuncs -> <empty>
Rule 23    functype -> VOID
Rule 24    functype -> typing
Rule 25    statutes -> assign statuteaux
Rule 26    statutes -> reading statuteaux
Rule 27    statutes -> writing statuteaux
Rule 28    statutes -> returning statuteaux
Rule 29    statutes -> ifing statuteaux
Rule 30    statutes -> whiling statuteaux
Rule 31    statutes -> foring statuteaux
Rule 32    statutes -> exp statuteaux
Rule 33    statutes -> media statuteaux
Rule 34    statutes -> plotxy statuteaux
Rule 35    statutes -> mediana statuteaux
Rule 36    statutes -> moda statuteaux
Rule 37    statutes -> variance statuteaux
Rule 38    statutes -> stdev statuteaux
Rule 39    statuteaux -> statutes
Rule 40    statuteaux -> empty
Rule 41    media -> MEDIA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
Rule 42    mediana -> MEDIANA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
Rule 43    moda -> MODA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
Rule 44    stdev -> STDEV LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
Rule 45    variance -> VARIANZA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
Rule 46    plotxy -> PLOTXY LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
Rule 47    specialfunclist -> <empty>
Rule 48    specfuncnumbers -> CTEINT neuralnum mulnumeros
Rule 49    specfuncnumbers -> CTEFLOAT neuralnum mulnumeros
Rule 50    neuralnum -> <empty>
Rule 51    mulnumeros -> COMMA specfuncnumbers
Rule 52    mulnumeros -> empty
Rule 53    typing -> INT
Rule 54    typing -> FLOAT
Rule 55    typing -> CHAR
Rule 56    parameters -> typing COLON neuralinsertparam idarray mulparams
Rule 57    parameters -> empty
Rule 58    neuralinsertparam -> ID
Rule 59    mulparams -> COMMA parameters
Rule 60    mulparams -> empty
Rule 61    assign -> neuralassign idarray neuralassign2 assignexp SEMICOLON
Rule 62    neuralassign -> ID
Rule 63    neuralassign2 -> EQUAL
Rule 64    assignexp -> exp
Rule 65    idarray -> neuralinitarray exp verify RIGHTSQR
Rule 66    idarray -> empty
Rule 67    neuralinitarray -> LEFTSQR
Rule 68    verify -> <empty>
Rule 69    returning -> RETURN LEFTPAR exp RIGHTPAR SEMICOLON
Rule 70    reading -> READ LEFTPAR neuralreadid idarray mulread RIGHTPAR SEMICOLON
Rule 71    neuralreadid -> ID
Rule 72    mulread -> COMMA neuralreadid idarray mulread
Rule 73    mulread -> empty
Rule 74    writing -> WRITE LEFTPAR neuralwrite mulwrite RIGHTPAR SEMICOLON
Rule 75    neuralwrite -> writetype
Rule 76    neuralwrite -> exp
Rule 77    writetype -> STRING
Rule 78    writetype -> CTECHAR
Rule 79    mulwrite -> COMMA neuralwrite mulwrite
Rule 80    mulwrite -> empty
Rule 81    ifing -> IF LEFTPAR exp neuralif THEN LEFTBR statutes RIGHTBR elsing
Rule 82    elsing -> neuralelse LEFTBR statutes RIGHTBR
Rule 83    elsing -> empty
Rule 84    neuralelse -> ELSE
Rule 85    neuralif -> RIGHTPAR
Rule 86    whiling -> neuralwhile LEFTPAR exp neuralwhile2 DO LEFTBR statutes RIGHTBR
Rule 87    neuralwhile -> WHILE
Rule 88    neuralwhile2 -> RIGHTPAR
Rule 89    foring -> FOR neuralfor idarray EQUAL exp neuralfor2 exp neuralfor3 LEFTBR statutes RIGHTBR
Rule 90    neuralfor -> ID
Rule 91    neuralfor2 -> TO
Rule 92    neuralfor3 -> DO
Rule 93    exp -> andexp exp1
Rule 94    exp1 -> OR exp
Rule 95    exp1 -> empty
Rule 96    andexp -> boolexp andexp1
Rule 97    andexp1 -> neuraland andexp
Rule 98    andexp1 -> empty
Rule 99    neuraland -> AND
Rule 100   boolexp -> arithexp boolexp1
Rule 101   boolexp1 -> neuralbool arithexp
Rule 102   boolexp1 -> empty
Rule 103   neuralbool -> GREATER
Rule 104   neuralbool -> GREATERAND
Rule 105   neuralbool -> LESSER
Rule 106   neuralbool -> LESSERAND
Rule 107   neuralbool -> SAME
Rule 108   neuralbool -> NOTSAME
Rule 109   neuralbool -> NOT
Rule 110   arithexp -> geoexp arithexp1
Rule 111   arithexp1 -> neuralarith arithexp
Rule 112   arithexp1 -> empty
Rule 113   neuralarith -> PLUS
Rule 114   neuralarith -> REST
Rule 115   geoexp -> finexp geoexp1
Rule 116   geoexp1 -> neuralgeo geoexp
Rule 117   geoexp1 -> empty
Rule 118   neuralgeo -> TIMES
Rule 119   neuralgeo -> DIVIDE
Rule 120   addbottom -> LEFTPAR
Rule 121   popbottom -> RIGHTPAR
Rule 122   finexp -> addbottom exp popbottom
Rule 123   finexp -> cteexp
Rule 124   paramsexp -> LEFTPAR neuralera paramsexp2 neuralpar
Rule 125   paramsexp -> idarray
Rule 126   paramsexp2 -> exp neuralpar2 mulparamsexp
Rule 127   paramsexp2 -> empty
Rule 128   neuralpar -> RIGHTPAR
Rule 129   neuralera -> <empty>
Rule 130   neuralpar2 -> <empty>
Rule 131   mulparamsexp -> COMMA exp neuralpar2 mulparamsexp
Rule 132   mulparamsexp -> empty
Rule 133   cteexp -> CTEINT
Rule 134   cteexp -> CTEFLOAT
Rule 135   cteexp -> CTECHAR
Rule 136   cteexp -> ID neuralexist paramsexp
Rule 137   neuralexist -> <empty>
Rule 138   empty -> <empty>

Terminals, with rules where they appear

AND                  : 99
CHAR                 : 55
COLON                : 6 56
COMMA                : 14 51 59 72 79 131
CTECHAR              : 78 135
CTEFLOAT             : 49 134
CTEINT               : 9 48 133
DIVIDE               : 119
DO                   : 86 92
ELSE                 : 84
EQUAL                : 63 89
FALSE                : 
FLOAT                : 54
FOR                  : 89
FUNCTION             : 15
GREATER              : 103
GREATERAND           : 104
ID                   : 2 8 17 58 62 71 90 136
IF                   : 81
INT                  : 53
LEFTBR               : 1 18 81 82 86 89
LEFTPAR              : 1 18 41 42 43 44 45 46 69 70 74 81 86 120 124
LEFTSQR              : 12 67
LESSER               : 105
LESSERAND            : 106
MEDIA                : 41
MEDIANA              : 42
MODA                 : 43
NOT                  : 109
NOTSAME              : 108
OR                   : 94
PLOTXY               : 46
PLUS                 : 113
PRINCIPAL            : 1
PROGRAM              : 1
READ                 : 70
REST                 : 114
RETURN               : 69
RIGHTBR              : 1 18 81 82 86 89
RIGHTPAR             : 1 18 41 42 43 44 45 46 69 70 74 85 88 121 128
RIGHTSQR             : 11 65
SAME                 : 107
SEMICOLON            : 2 13 18 41 42 43 44 45 46 61 69 70 74
STDEV                : 44
STR                  : 
STRING               : 77
THEN                 : 81
TIMES                : 118
TO                   : 91
TRUE                 : 
VARIANZA             : 45
VARS                 : 4
VOID                 : 23
WHILE                : 87
WRITE                : 74
error                : 

Nonterminals, with rules where they appear

addbottom            : 122
andexp               : 93 97
andexp1              : 96
arithexp             : 100 101 111
arithexp1            : 110
assign               : 25
assignexp            : 61
boolexp              : 96
boolexp1             : 100
cteexp               : 123
elsing               : 81
empty                : 5 7 10 16 40 52 57 60 66 73 80 83 95 98 102 112 117 127 132
exp                  : 32 64 65 69 76 81 86 89 89 94 122 126 131
exp1                 : 93
finexp               : 115
foring               : 31
funcparam            : 15
functions            : 1 18
functype             : 15
geoexp               : 110 116
geoexp1              : 115
idarray              : 56 61 70 72 89 125
ifing                : 29
media                : 33
mediana              : 35
moda                 : 36
mulnumeros           : 48 49
mulparams            : 56
mulparamsexp         : 126 131
mulread              : 70 72
mulwrite             : 74 79
neuraladdfuncstable  : 1
neuraland            : 97
neuralarith          : 111
neuralassign         : 61
neuralassign2        : 61
neuralbool           : 101
neuralelse           : 82
neuralenddim         : 9
neuralendfuncs       : 18
neuralera            : 124
neuralexist          : 136
neuralfor            : 89
neuralfor2           : 89
neuralfor3           : 89
neuralfuncsize       : 18
neuralgeo            : 116
neuralif             : 81
neuralinitarray      : 65
neuralinitdim        : 9
neuralinitfuncs      : 18
neuralinsertfuncs    : 15
neuralinsertparam    : 56
neuralinsertvar      : 6 14
neuralnum            : 48 49
neuralpar            : 124
neuralpar2           : 126 131
neuralprinjump       : 1
neuralreadid         : 70 72
neuralupdateparamtable : 18
neuralwhile          : 86
neuralwhile2         : 86
neuralwrite          : 74 79
parameters           : 18 59
paramsexp            : 136
paramsexp2           : 124
plotxy               : 34
popbottom            : 122
program              : 0
reading              : 26
returning            : 28
specfuncnumbers      : 41 42 43 44 45 46 51
specialfunclist      : 41 42 43 44 45 46
statuteaux           : 25 26 27 28 29 30 31 32 33 34 35 36 37 38
statutes             : 1 18 39 81 82 86 89
stdev                : 38
typing               : 6 24 56
variance             : 37
vars                 : 4 6
varsarr              : 6 14
varsgl               : 1 18
varsmul              : 6 14
verify               : 65
whiling              : 30
writetype            : 75
writing              : 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM neuraladdfuncstable varsgl functions PRINCIPAL LEFTPAR RIGHTPAR LEFTBR neuralprinjump statutes RIGHTBR

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . neuraladdfuncstable varsgl functions PRINCIPAL LEFTPAR RIGHTPAR LEFTBR neuralprinjump statutes RIGHTBR
    (2) neuraladdfuncstable -> . ID SEMICOLON

    ID              shift and go to state 4

    neuraladdfuncstable            shift and go to state 3

state 3

    (1) program -> PROGRAM neuraladdfuncstable . varsgl functions PRINCIPAL LEFTPAR RIGHTPAR LEFTBR neuralprinjump statutes RIGHTBR
    (4) varsgl -> . VARS vars
    (5) varsgl -> . empty
    (138) empty -> .

    VARS            shift and go to state 6
    FUNCTION        reduce using rule 138 (empty -> .)
    PRINCIPAL       reduce using rule 138 (empty -> .)

    varsgl                         shift and go to state 5
    empty                          shift and go to state 7

state 4

    (2) neuraladdfuncstable -> ID . SEMICOLON

    SEMICOLON       shift and go to state 8


state 5

    (1) program -> PROGRAM neuraladdfuncstable varsgl . functions PRINCIPAL LEFTPAR RIGHTPAR LEFTBR neuralprinjump statutes RIGHTBR
    (15) functions -> . FUNCTION functype neuralinsertfuncs funcparam
    (16) functions -> . empty
    (138) empty -> .

    FUNCTION        shift and go to state 10
    PRINCIPAL       reduce using rule 138 (empty -> .)

    functions                      shift and go to state 9
    empty                          shift and go to state 11

state 6

    (4) varsgl -> VARS . vars
    (6) vars -> . typing COLON neuralinsertvar varsarr varsmul vars
    (7) vars -> . empty
    (53) typing -> . INT
    (54) typing -> . FLOAT
    (55) typing -> . CHAR
    (138) empty -> .

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    FUNCTION        reduce using rule 138 (empty -> .)
    PRINCIPAL       reduce using rule 138 (empty -> .)
    LEFTBR          reduce using rule 138 (empty -> .)

    vars                           shift and go to state 12
    typing                         shift and go to state 13
    empty                          shift and go to state 14

state 7

    (5) varsgl -> empty .

    FUNCTION        reduce using rule 5 (varsgl -> empty .)
    PRINCIPAL       reduce using rule 5 (varsgl -> empty .)
    LEFTBR          reduce using rule 5 (varsgl -> empty .)


state 8

    (2) neuraladdfuncstable -> ID SEMICOLON .

    VARS            reduce using rule 2 (neuraladdfuncstable -> ID SEMICOLON .)
    FUNCTION        reduce using rule 2 (neuraladdfuncstable -> ID SEMICOLON .)
    PRINCIPAL       reduce using rule 2 (neuraladdfuncstable -> ID SEMICOLON .)


state 9

    (1) program -> PROGRAM neuraladdfuncstable varsgl functions . PRINCIPAL LEFTPAR RIGHTPAR LEFTBR neuralprinjump statutes RIGHTBR

    PRINCIPAL       shift and go to state 18


state 10

    (15) functions -> FUNCTION . functype neuralinsertfuncs funcparam
    (23) functype -> . VOID
    (24) functype -> . typing
    (53) typing -> . INT
    (54) typing -> . FLOAT
    (55) typing -> . CHAR

    VOID            shift and go to state 20
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    functype                       shift and go to state 19
    typing                         shift and go to state 21

state 11

    (16) functions -> empty .

    PRINCIPAL       reduce using rule 16 (functions -> empty .)


state 12

    (4) varsgl -> VARS vars .

    FUNCTION        reduce using rule 4 (varsgl -> VARS vars .)
    PRINCIPAL       reduce using rule 4 (varsgl -> VARS vars .)
    LEFTBR          reduce using rule 4 (varsgl -> VARS vars .)


state 13

    (6) vars -> typing . COLON neuralinsertvar varsarr varsmul vars

    COLON           shift and go to state 22


state 14

    (7) vars -> empty .

    FUNCTION        reduce using rule 7 (vars -> empty .)
    PRINCIPAL       reduce using rule 7 (vars -> empty .)
    LEFTBR          reduce using rule 7 (vars -> empty .)


state 15

    (53) typing -> INT .

    COLON           reduce using rule 53 (typing -> INT .)
    ID              reduce using rule 53 (typing -> INT .)


state 16

    (54) typing -> FLOAT .

    COLON           reduce using rule 54 (typing -> FLOAT .)
    ID              reduce using rule 54 (typing -> FLOAT .)


state 17

    (55) typing -> CHAR .

    COLON           reduce using rule 55 (typing -> CHAR .)
    ID              reduce using rule 55 (typing -> CHAR .)


state 18

    (1) program -> PROGRAM neuraladdfuncstable varsgl functions PRINCIPAL . LEFTPAR RIGHTPAR LEFTBR neuralprinjump statutes RIGHTBR

    LEFTPAR         shift and go to state 23


state 19

    (15) functions -> FUNCTION functype . neuralinsertfuncs funcparam
    (17) neuralinsertfuncs -> . ID

    ID              shift and go to state 25

    neuralinsertfuncs              shift and go to state 24

state 20

    (23) functype -> VOID .

    ID              reduce using rule 23 (functype -> VOID .)


state 21

    (24) functype -> typing .

    ID              reduce using rule 24 (functype -> typing .)


state 22

    (6) vars -> typing COLON . neuralinsertvar varsarr varsmul vars
    (8) neuralinsertvar -> . ID

    ID              shift and go to state 27

    neuralinsertvar                shift and go to state 26

state 23

    (1) program -> PROGRAM neuraladdfuncstable varsgl functions PRINCIPAL LEFTPAR . RIGHTPAR LEFTBR neuralprinjump statutes RIGHTBR

    RIGHTPAR        shift and go to state 28


state 24

    (15) functions -> FUNCTION functype neuralinsertfuncs . funcparam
    (18) funcparam -> . LEFTPAR parameters RIGHTPAR neuralupdateparamtable SEMICOLON varsgl LEFTBR neuralinitfuncs statutes RIGHTBR neuralfuncsize neuralendfuncs functions

    LEFTPAR         shift and go to state 30

    funcparam                      shift and go to state 29

state 25

    (17) neuralinsertfuncs -> ID .

    LEFTPAR         reduce using rule 17 (neuralinsertfuncs -> ID .)


state 26

    (6) vars -> typing COLON neuralinsertvar . varsarr varsmul vars
    (9) varsarr -> . neuralinitdim CTEINT neuralenddim
    (10) varsarr -> . empty
    (12) neuralinitdim -> . LEFTSQR
    (138) empty -> .

    LEFTSQR         shift and go to state 34
    SEMICOLON       reduce using rule 138 (empty -> .)
    COMMA           reduce using rule 138 (empty -> .)

    varsarr                        shift and go to state 31
    neuralinitdim                  shift and go to state 32
    empty                          shift and go to state 33

state 27

    (8) neuralinsertvar -> ID .

    LEFTSQR         reduce using rule 8 (neuralinsertvar -> ID .)
    SEMICOLON       reduce using rule 8 (neuralinsertvar -> ID .)
    COMMA           reduce using rule 8 (neuralinsertvar -> ID .)


state 28

    (1) program -> PROGRAM neuraladdfuncstable varsgl functions PRINCIPAL LEFTPAR RIGHTPAR . LEFTBR neuralprinjump statutes RIGHTBR

    LEFTBR          shift and go to state 35


state 29

    (15) functions -> FUNCTION functype neuralinsertfuncs funcparam .

    PRINCIPAL       reduce using rule 15 (functions -> FUNCTION functype neuralinsertfuncs funcparam .)


state 30

    (18) funcparam -> LEFTPAR . parameters RIGHTPAR neuralupdateparamtable SEMICOLON varsgl LEFTBR neuralinitfuncs statutes RIGHTBR neuralfuncsize neuralendfuncs functions
    (56) parameters -> . typing COLON neuralinsertparam idarray mulparams
    (57) parameters -> . empty
    (53) typing -> . INT
    (54) typing -> . FLOAT
    (55) typing -> . CHAR
    (138) empty -> .

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    RIGHTPAR        reduce using rule 138 (empty -> .)

    parameters                     shift and go to state 36
    typing                         shift and go to state 37
    empty                          shift and go to state 38

state 31

    (6) vars -> typing COLON neuralinsertvar varsarr . varsmul vars
    (13) varsmul -> . SEMICOLON
    (14) varsmul -> . COMMA neuralinsertvar varsarr varsmul

    SEMICOLON       shift and go to state 40
    COMMA           shift and go to state 41

    varsmul                        shift and go to state 39

state 32

    (9) varsarr -> neuralinitdim . CTEINT neuralenddim

    CTEINT          shift and go to state 42


state 33

    (10) varsarr -> empty .

    SEMICOLON       reduce using rule 10 (varsarr -> empty .)
    COMMA           reduce using rule 10 (varsarr -> empty .)


state 34

    (12) neuralinitdim -> LEFTSQR .

    CTEINT          reduce using rule 12 (neuralinitdim -> LEFTSQR .)


state 35

    (1) program -> PROGRAM neuraladdfuncstable varsgl functions PRINCIPAL LEFTPAR RIGHTPAR LEFTBR . neuralprinjump statutes RIGHTBR
    (3) neuralprinjump -> .

    READ            reduce using rule 3 (neuralprinjump -> .)
    WRITE           reduce using rule 3 (neuralprinjump -> .)
    RETURN          reduce using rule 3 (neuralprinjump -> .)
    IF              reduce using rule 3 (neuralprinjump -> .)
    FOR             reduce using rule 3 (neuralprinjump -> .)
    MEDIA           reduce using rule 3 (neuralprinjump -> .)
    PLOTXY          reduce using rule 3 (neuralprinjump -> .)
    MEDIANA         reduce using rule 3 (neuralprinjump -> .)
    MODA            reduce using rule 3 (neuralprinjump -> .)
    VARIANZA        reduce using rule 3 (neuralprinjump -> .)
    STDEV           reduce using rule 3 (neuralprinjump -> .)
    ID              reduce using rule 3 (neuralprinjump -> .)
    WHILE           reduce using rule 3 (neuralprinjump -> .)
    LEFTPAR         reduce using rule 3 (neuralprinjump -> .)
    CTEINT          reduce using rule 3 (neuralprinjump -> .)
    CTEFLOAT        reduce using rule 3 (neuralprinjump -> .)
    CTECHAR         reduce using rule 3 (neuralprinjump -> .)

    neuralprinjump                 shift and go to state 43

state 36

    (18) funcparam -> LEFTPAR parameters . RIGHTPAR neuralupdateparamtable SEMICOLON varsgl LEFTBR neuralinitfuncs statutes RIGHTBR neuralfuncsize neuralendfuncs functions

    RIGHTPAR        shift and go to state 44


state 37

    (56) parameters -> typing . COLON neuralinsertparam idarray mulparams

    COLON           shift and go to state 45


state 38

    (57) parameters -> empty .

    RIGHTPAR        reduce using rule 57 (parameters -> empty .)


state 39

    (6) vars -> typing COLON neuralinsertvar varsarr varsmul . vars
    (6) vars -> . typing COLON neuralinsertvar varsarr varsmul vars
    (7) vars -> . empty
    (53) typing -> . INT
    (54) typing -> . FLOAT
    (55) typing -> . CHAR
    (138) empty -> .

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    FUNCTION        reduce using rule 138 (empty -> .)
    PRINCIPAL       reduce using rule 138 (empty -> .)
    LEFTBR          reduce using rule 138 (empty -> .)

    typing                         shift and go to state 13
    vars                           shift and go to state 46
    empty                          shift and go to state 14

state 40

    (13) varsmul -> SEMICOLON .

    INT             reduce using rule 13 (varsmul -> SEMICOLON .)
    FLOAT           reduce using rule 13 (varsmul -> SEMICOLON .)
    CHAR            reduce using rule 13 (varsmul -> SEMICOLON .)
    FUNCTION        reduce using rule 13 (varsmul -> SEMICOLON .)
    PRINCIPAL       reduce using rule 13 (varsmul -> SEMICOLON .)
    LEFTBR          reduce using rule 13 (varsmul -> SEMICOLON .)


state 41

    (14) varsmul -> COMMA . neuralinsertvar varsarr varsmul
    (8) neuralinsertvar -> . ID

    ID              shift and go to state 27

    neuralinsertvar                shift and go to state 47

state 42

    (9) varsarr -> neuralinitdim CTEINT . neuralenddim
    (11) neuralenddim -> . RIGHTSQR

    RIGHTSQR        shift and go to state 49

    neuralenddim                   shift and go to state 48

state 43

    (1) program -> PROGRAM neuraladdfuncstable varsgl functions PRINCIPAL LEFTPAR RIGHTPAR LEFTBR neuralprinjump . statutes RIGHTBR
    (25) statutes -> . assign statuteaux
    (26) statutes -> . reading statuteaux
    (27) statutes -> . writing statuteaux
    (28) statutes -> . returning statuteaux
    (29) statutes -> . ifing statuteaux
    (30) statutes -> . whiling statuteaux
    (31) statutes -> . foring statuteaux
    (32) statutes -> . exp statuteaux
    (33) statutes -> . media statuteaux
    (34) statutes -> . plotxy statuteaux
    (35) statutes -> . mediana statuteaux
    (36) statutes -> . moda statuteaux
    (37) statutes -> . variance statuteaux
    (38) statutes -> . stdev statuteaux
    (61) assign -> . neuralassign idarray neuralassign2 assignexp SEMICOLON
    (70) reading -> . READ LEFTPAR neuralreadid idarray mulread RIGHTPAR SEMICOLON
    (74) writing -> . WRITE LEFTPAR neuralwrite mulwrite RIGHTPAR SEMICOLON
    (69) returning -> . RETURN LEFTPAR exp RIGHTPAR SEMICOLON
    (81) ifing -> . IF LEFTPAR exp neuralif THEN LEFTBR statutes RIGHTBR elsing
    (86) whiling -> . neuralwhile LEFTPAR exp neuralwhile2 DO LEFTBR statutes RIGHTBR
    (89) foring -> . FOR neuralfor idarray EQUAL exp neuralfor2 exp neuralfor3 LEFTBR statutes RIGHTBR
    (93) exp -> . andexp exp1
    (41) media -> . MEDIA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (46) plotxy -> . PLOTXY LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (42) mediana -> . MEDIANA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (43) moda -> . MODA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (45) variance -> . VARIANZA LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (44) stdev -> . STDEV LEFTPAR specfuncnumbers RIGHTPAR specialfunclist SEMICOLON
    (62) neuralassign -> . ID
    (87) neuralwhile -> . WHILE
    (96) andexp -> . boolexp andexp1
    (100) boolexp -> . arithexp boolexp1
    (110) arithexp -> . geoexp arithexp1
    (115) geoexp -> . finexp geoexp1
    (122) finexp -> . addbottom exp popbottom
    (123) finexp -> . cteexp
    (120) addbottom -> . LEFTPAR
    (133) cteexp -> . CTEINT
    (134) cteexp -> . CTEFLOAT
    (135) cteexp -> . CTECHAR
    (136) cteexp -> . ID neuralexist paramsexp

    READ            shift and go to state 67
    WRITE           shift and go to state 68
    RETURN          shift and go to state 69
    IF              shift and go to state 70
    FOR             shift and go to state 72
    MEDIA           shift and go to state 74
    PLOTXY          shift and go to state 75
    MEDIANA         shift and go to state 76
    MODA            shift and go to state 77
    VARIANZA        shift and go to state 78
    STDEV           shift and go to state 79
    ID              shift and go to state 80
    WHILE           shift and go to state 81
    LEFTPAR         shift and go to state 50
    CTEINT          shift and go to state 88
    CTEFLOAT        shift and go to state 89
    CTECHAR         shift and go to state 90

    statutes                       shift and go to state 51
    assign                         shift and go to state 52
    reading                        shift and go to state 53
    writing                        shift and go to state 54
    returning                      shift and go to state 55
    ifing                          shift and go to state 56
    whiling                        shift and go to state 57
    foring                         shift and go to state 58
    exp                            shift and go to state 59
    media                          shift and go to state 60
    plotxy                         shift and go to state 61
    mediana                        shift and go to state 62
    moda                           shift and go to state 63
    variance                       shift and go to state 64
    stdev                          shift and go to state 65
    neuralassign                   shift and go to state 66
    neuralwhile                    shift and go to state 71
    andexp                         shift and go to state 73
    boolexp                        shift and go to state 82
    arithexp                       shift and go to state 83
    geoexp                         shift and go to state 84
    finexp                         shift and go to state 85
    addbottom                      shift and go to state 86
    cteexp                         shift and go to state 87

state 44

    (18) funcparam -> LEFTPAR parameters RIGHTPAR . neuralupdateparamtable SEMICOLON varsgl LEFTBR neuralinitfuncs statutes RIGHTBR neuralfuncsize neuralendfuncs functions
    (19) neuralupdateparamtable -> .

    SEMICOLON       reduce using rule 19 (neuralupdateparamtable -> .)

    neuralupdateparamtable         shift and go to state 91

state 45

    (56) parameters -> typing COLON . neuralinsertparam idarray mulparams
    (58) neuralinsertparam -> . ID

    ID              shift and go to state 93

    neuralinsertparam              shift and go to state 92

state 46

    (6) vars -> typing COLON neuralinsertvar varsarr varsmul vars .

    FUNCTION        reduce using rule 6 (vars -> typing COLON neuralinsertvar varsarr varsmul vars .)
    PRINCIPAL       reduce using rule 6 (vars -> typing COLON neuralinsertvar varsarr varsmul vars .)
    LEFTBR          reduce using rule 6 (vars -> typing COLON neuralinsertvar varsarr varsmul vars .)


state 47

    (14) varsmul -> COMMA neuralinsertvar . varsarr varsmul
    (9) varsarr -> . neuralinitdim CTEINT neuralenddim
    (10) varsarr -> . empty
    (12) neuralinitdim -> . LEFTSQR
    (138) empty -> .

    LEFTSQR         shift and go to state 34
    SEMICOLON       reduce using rule 138 (empty -> .)
    COMMA           reduce using rule 138 (empty -> .)

    varsarr                        shift and go to state 94
    neuralinitdim                  shift and go to state 32
    empty                          shift and go to state 33

state 48

    (9) varsarr -> neuralinitdim CTEINT neuralenddim .

    SEMICOLON       reduce using rule 9 (varsarr -> neuralinitdim CTEINT neuralenddim .)
    COMMA           reduce using rule 9 (varsarr -> neuralinitdim CTEINT neuralenddim .)


state 49

    (11) neuralenddim -> RIGHTSQR .

    SEMICOLON       reduce using rule 11 (neuralenddim -> RIGHTSQR .)
    COMMA           reduce using rule 11 (neuralenddim -> RIGHTSQR .)


state 50

    (120) addbottom -> LEFTPAR .

    LEFTPAR         reduce using rule 120 (addbottom -> LEFTPAR .)
    CTEINT          reduce using rule 120 (addbottom -> LEFTPAR .)
    CTEFLOAT        reduce using rule 120 (addbottom -> LEFTPAR .)
    CTECHAR         reduce using rule 120 (addbottom -> LEFTPAR .)
    ID              reduce using rule 120 (addbottom -> LEFTPAR .)


state 51

    (1) program -> PROGRAM neuraladdfuncstable varsgl functions PRINCIPAL LEFTPAR RIGHTPAR LEFTBR neuralprinjump statutes . RIGHTBR

    RIGHTBR         shift and go to state 95


state 52
